{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 185,
  "lineage": "e620bab9-10e6-88d2-7ee9-828e1f85e5f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Artifactory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0378588b4ae11ec24",
            "arn": "arn:aws:ec2:us-east-1:991869113416:instance/i-019f5fcb9e0b56c9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-019f5fcb9e0b56c9e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-root",
            "monitoring": false,
            "primary_network_interface_id": "eni-069959b1ede949110",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-54-174-67-43.compute-1.amazonaws.com",
            "public_ip": "54.174.67.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9d4b5fd95106b67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a0610cf2c2759b0",
            "tags": {
              "Name": "Artifactory"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh-group",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CI",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0378588b4ae11ec24",
            "arn": "arn:aws:ec2:us-east-1:991869113416:instance/i-0615f3ccc85ca8d67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0615f3ccc85ca8d67",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-root",
            "monitoring": false,
            "primary_network_interface_id": "eni-0386d2a32180e17ba",
            "private_dns": "ip-10-0-1-136.ec2.internal",
            "private_ip": "10.0.1.136",
            "public_dns": "ec2-18-212-10-36.compute-1.amazonaws.com",
            "public_ip": "18.212.10.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a6b057ffb9fa4c71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a0610cf2c2759b0",
            "tags": {
              "Name": "CI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh-group",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevTools",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0378588b4ae11ec24",
            "arn": "arn:aws:ec2:us-east-1:991869113416:instance/i-0256c73d6a8275751",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0256c73d6a8275751",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-root",
            "monitoring": false,
            "primary_network_interface_id": "eni-0621b8a6ddd6759f4",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-3-95-169-14.compute-1.amazonaws.com",
            "public_ip": "3.95.169.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b311f22425a44e9b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a0610cf2c2759b0",
            "tags": {
              "Name": "DevTools"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh-group",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0378588b4ae11ec24",
            "arn": "arn:aws:ec2:us-east-1:991869113416:instance/i-0e1bac382981b9f50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e1bac382981b9f50",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-root",
            "monitoring": false,
            "primary_network_interface_id": "eni-08615c224e633c15d",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-18-234-165-174.compute-1.amazonaws.com",
            "public_ip": "18.234.165.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bd38a39797350692",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a0610cf2c2759b0",
            "tags": {
              "Name": "Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181000ac7ab80b44",
              "sg-0caa013afa51112d4"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh-group",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bc328fd85413b83f",
            "owner_id": "991869113416",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0ff0486a8ecc69bea"
          },
          "depends_on": [
            "aws_vpc.vpc-tst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e34a60bdf9f4c7f8",
            "owner_id": "991869113416",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc328fd85413b83f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0ff0486a8ecc69bea"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-tst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2a59f376f35412a",
            "route_table_id": "rtb-0e34a60bdf9f4c7f8",
            "subnet_id": "subnet-05a0610cf2c2759b0"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991869113416:security-group/sg-0caa013afa51112d4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0caa013afa51112d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190901101657238200000001",
            "name_prefix": null,
            "owner_id": "991869113416",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff0486a8ecc69bea"
          },
          "depends_on": [
            "aws_vpc.vpc-tst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnetsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991869113416:security-group/sg-0181000ac7ab80b44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0181000ac7ab80b44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20190901101657238200000002",
            "name_prefix": null,
            "owner_id": "991869113416",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff0486a8ecc69bea"
          },
          "depends_on": [
            "aws_vpc.vpc-tst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991869113416:subnet/subnet-05a0610cf2c2759b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05a0610cf2c2759b0",
            "map_public_ip_on_launch": true,
            "owner_id": "991869113416",
            "tags": {
              "Name": "PubSub"
            },
            "vpc_id": "vpc-0ff0486a8ecc69bea"
          },
          "depends_on": [
            "aws_vpc.vpc-tst"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tst",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991869113416:vpc/vpc-0ff0486a8ecc69bea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad6038958d571dcf",
            "default_route_table_id": "rtb-09ebe45e564302812",
            "default_security_group_id": "sg-0c7b979a4bb5787d8",
            "dhcp_options_id": "dopt-4717163c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ff0486a8ecc69bea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ebe45e564302812",
            "owner_id": "991869113416",
            "tags": {
              "Name": "vpc-tst"
            }
          }
        }
      ]
    }
  ]
}